Wed Jun 30 18:41:20 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* win32/Makefile.msvc win32/Makefile.mingw libexslt/Makefile.am
	  libexslt/exslt.c libexslt/exslt.h config.h.in configure.in
	  libexslt/crypto.c: applied patch from Joel Reed to get EXSLT
	  crypto extensions based on libgcrypt if found at configure time.
	* tests/namespaces/Makefile.am: fixed a small breakage

Wed Jun 30 12:28:34 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/namespaces: some enhancement for fixing bug 142768
	* tests/namespaces/Makefile.am, tests/namespaces/tst6*:
	  added regression test for this bug

Tue Jun 29 09:23:03 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* Makefile.am examples/xsltICUSort.c: seems I never commited to CVS
	  the example from Richard Jinks

Wed Jun  9 16:33:56 CEST 2004 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/configure.js win32/Makefile.* minor changes for the new
	  layout of the Windows binary package

Wed May 26 10:51:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* doc/search.php.inc, doc/search/php: enhanced to remove
	  forcing module names to lower case, and to fix problem
	  with links between pages in libxml2 directory.

Mon May 24 12:46:10 HKT 2004 Igor Zlatkovic <igor@zlatkovic.com>

	* win32/makefile.msvc, win32/configure.js: included the cruntime 
	  option, contributed by Oliver Stoeneberg

Mon May 24 08:37:22 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/xsltutils.c: fixed bug in error message printing
	  for undefined namespace (bug 143004)

Mon May 17 23:08:42 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* NEWS doc/*: updated for 1.1.7

Mon May 17 06:14:09 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in: release of libxslt-1.1.7

Sun May 16 23:08:05 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-151*, tests/docs/bug-151.xml,
	  tests/general/Makefile.am, tests/docs/Makefile.am: added
	  regression test for old bug #127877
