@@ -1,3 +1,10 @@
+Thu Jul  1 10:07:55 HKT 2004 William Brack <wbrack@mmm.com.hk>
+
+	* libxslt/transform.c: added coding to xsltCopyTree to copy
+	  namespaces (bug 139578).
+	* tests/general/bug-128.out: changed to reflect above fix
+	* libxslt/xslt.c: minor change to an error message
+
 Wed Jun 30 18:41:20 CEST 2004 Daniel Veillard <daniel@veillard.com>
 
 	* win32/Makefile.msvc win32/Makefile.mingw libexslt/Makefile.am
